2007-12-29 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ArgHandler.py: better handling of -l
	* src/const.py.in: forgot to commit this, new constants
	* configure.in: remove GrampsDb makefile
	* src/DbManager.py: allow inheriting create_new_db_cli
	Rerun ./autogen.sh !!

2007-12-29  Douglas S. Blank  <dblank@saliva.brynmawr.edu>
	* src/DataViews/MyGrampsView.py: renamed background to main
	* src/plugins/DefaultGadgets.py: call main (generator)

2007-12-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/SameSurnames.py: new quick report for showing 
	people with same surnames

2007-12-28 Jim Sack <jgsack@san.rr.com>
	* src/gen/utils/test/callback_test.py: rename dup name (fn -> fn3)
	The dup name was harmless but confusing, and a potential future
	problem. Thanks to Raphael Ackermann for pointing this out.

2007-12-28 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: remove unused functions, add alt actions left/right
	* src/GrampsDb: deleted with _GrampsDbWriteXML.py,
		_GrampsDbFactories.py, _GrampsGEDDB.py, _GrampsXMLDB.py,
		__init__.py, Makefile.am, _GrampsInMemDB.py, _GrampsBSDDB.py.
		No more inmemory databases
	* src/GrampsDbUtils: moved here _GrampsDbWriteXML.py and _GrampsBSDDB.py
	* src/plugins/ReadGrdb.py:
	* src/plugins/Checkpoint.py:
	* src/ObjectSelector/_ObjectSelectorWindow.py:
	* src/DbManager.py:
	* src/GrampsDbUtils/_WriteGrdb.py:
	* src/GrampsDbUtils/__init__.py:
	* src/GrampsDbUtils/_GrampsDbWRFactories.py:
	* src/GrampsDbUtils/_WriteXML.py:
	* src/GrampsDbUtils/Makefile.am:
	* src/gramps_main.py:
	* src/RecentFiles.py: recent-files-gramps.xml, don't overwrite 2.2.x data
	* src/ArgHandler.py:
	* src/DbLoader.py: remove unused functions
	* src/Makefile.am:
	* po/POTFILES.in:
	* src/GrampsDbUtils/importdbdir.py: allow import of new database via cli
	Remove inMem Editing, move remaining to DbUtils, fix ArgHandler

2007-12-28  Stéphane Charette <stephanecharette@gmail.com>